--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Projeto DIO</title>
   </head>
   <body>
-    <h1 id="voltar" />
-    <h2>indice</h2>
+    <h1> Projeto DIO</h1>
+    <hr />
+    <h2 id="voltar">indice</h2>
     <ul class="li"><a href="#tags">falando sobre tags</a></ul>
     <ul class="li"><a href="#atributos">atributos das Tags</a></ul>
     <ul class="li"><a href="#texto">textos</a></ul>
